gap fix

--- a/src/components/AdCard/AdCard.module.css
+++ b/src/components/AdCard/AdCard.module.css
@@ -52,6 +52,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    gap: 5px;
 }
 
 .buttonsContainer button{
